CHANGELOG - 0 Point for Drupal 6

0 Point (Sep 19, 2012)
----------------------

  Bug fixes:
    o #1720706: Ckeditor and any scripts in $closure doesn't work because of missed dot in template.php.
      Thanks to RedRat (http://drupal.org/user/368644).
    o #1759016: Does not work with admin_menu module.
    o #1715382: Google analytics. 

0 Point (Jul 29, 2012)
----------------------

  Bug fixes:
    o #1195888: Errors in zeropoint_login function.
    o #1347088: Subtheming not possible.
    o #1620678: ZeroPoint new color style. Thanks to mindfree (http://drupal.org/user/1877354).
    o #1635390: Dropdown menus partially hidden behind second row of main menu (IE8, Chrome, & FF).

  Other changes:
    o Added rel="nofollow" to ZeroPoint login/register links.

0 Point (Jan 20, 2010)
----------------------
  Bug fixes: all
  
  Other changes:
    o New Drop Down menu system.
    o Improved RTL language support.
    o Added Site ID bodyclass in theme development settings
    o Added Fix IE stylesheet limit in theme development settings

0 Point (Feb 19, 2010)
----------------------

  Bug fixes:
    o #676012: Line 311 of template.php throws a warning if there are no themes issues and the array has not been initialized.
    o #673954: Erratic behaviour for print and pdf icons.
    o #648792: IE6/IE7 CSSs doesn't load in a non root Drupal installation.

  Other changes:
    o Added header image rotator as a theme settings option.
    o #675694: Added RTL language support.
    
    
0 Point (Dec 25, 2009)
----------------------

  Bug fixes:
    o #598024: Print icon shows twice.
    o #518452: The search box check box in the "toggle display" section of the zeropoint theme keeps resetting.
    o #579360: Bullets/numbers rendering improperly in IE.
    o #512230: Forum icons don't look normal if advance forum module is installed.
    o #559964: Images in views are collapsed while opening page with IE8.
    o #630164: FCKeditor not appearing.